--- a/style.css
+++ b/style.css
@@ -1,112 +1,4 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  .loginbody{
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: #f0f0f0;
-  }
-  
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  
-  nav ul li {
-    margin-right: 20px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: white;
-    background-color: blue;
-    padding: 10px;
-  }
-
-  .login {
-    width: 300px;
-    padding: 30px;
-    background-color: #f0f0f0;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
-  
-  .login input {
-    width: 100%;
-    margin: 10px 0;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .SubmitLogin {
-    width: 100%;
-    margin-top: 10px;
-    padding: 10px;
-    background-color: blue;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  .SubmitLogin:hover {
-    background-color: darkblue;
-  }
-
-  .user {
-    display: flex;
-    align-items: center;
-  }
-  
-  .user img {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-  }
-  
-  main {
-    padding: 20px;
-  }
-  
-  .search {
-    margin-bottom: 20px;
-  }
-  
-  .search input {
-    padding: 10px;
-    border: 1px solid #ccc;
-  }
-  
-  .metrics {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-  }
-  
-  .metric {
-    border: 1px solid #ccc;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .metric img {
-    width: 100%;
-  }
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
